0.6.2
	- Oryginal i kopia osobno, nie trzeba skreslac + mozliwosc zdefiniowania ilosci kopii
	- Osluga pluginow pythona, PyQt
	- Duplikaty faktur, nie sa one zapisywane

0.6.1
	- przenisienia z cmake na qmake (cmake ma duzo limitacji), np. build nie dziala z eclipse, deb nie dodaje plikow ikon
	- bugi: 2713949, 2700432, 2706600 (piecdziesiat), 2718411, 2718718
	- zdefiniowania kilku CSS do wydruku faktur
	- format nip i konto bankowego w ustawieniach
	- menu kontextowe
	- sortowanie danych w historii, kontrahentach i towarach

0.6.0
	Initial release po zlaczeniu funkcji z 0.0.3 z wersja 0.5.0