@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>326</width>
-    <height>255</height>
+    <width>328</width>
+    <height>283</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -170,12 +170,12 @@
           <widget class="QComboBox" name="typeCombo" >
            <item>
             <property name="text" >
-             <string>towar</string>
+             <string>Towar</string>
             </property>
            </item>
            <item>
             <property name="text" >
-             <string>usługa</string>
+             <string>Usługa</string>
             </property>
            </item>
           </widget>
