@@ -69,33 +69,17 @@ void TowaryBruttoLista::doAccept() {
 }
 
 void TowaryBruttoLista::calcNetto(){
-/*
-				WB x SP
-		KP  = --------------
-                100 + SP
-    gdzie:
-    KP - oznacza kwotę podatku z podziałem na poszczególne stawki podatku, przy czym
-		 wielkość wynikającą z wzoru zaokrągla się;
-    WB - oznacza sumę wartości sprzedaży brutto z podziałem na poszczególne stawki podatku,
-    SP - oznacza stawkę podatku;
-
-    sumę wartości sprzedaży netto stanowi różnica między wartością sprzedaży brutto a kwotą podatku,
-    z podziałem na poszczególne stawki podatku;
-    w pozostałym zakresie stosować należy zasady dotyczące standardowej faktury.
-
- */
 	QList<QListWidgetItem *> items = listWidget->selectedItems();
 	if (items.size() == 1) {
 		QListWidgetItem *item = items[0];
 		double price = (countSpinBox->value() * priceBoxEdit->value()); // price * quantity
 
 		double discount = price * (rabatSpin->value() * 0.01);
+
 		double wb = price - discount;
 		int sp = vats[item->text()];
-		double vat = (wb * sp) / (100+sp);
+		double vat = (wb * sp) / 100;
 		QString vatStr = sett().numberToString(vat, 'f', 8);
-		QMessageBox::information(this, "QFaktury", vatStr,
-				QMessageBox::Ok);
 
 		double netto2 = wb - vat;
 		// qDebug() << price << discount << netto2 << brutto2 << vat;
