@@ -166,7 +166,7 @@
               <number>3</number>
              </property>
              <property name="maximum" >
-              <double>999.990000000000009</double>
+              <double>9999.989999999999782</double>
              </property>
             </widget>
            </item>
